@@ -205,7 +205,8 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - [ ] Call server::load(worldconfig) or server::generate(config)
 - [ ] Launch an embedded server
 - [ ] See if we can generate a first landscape
-
+**** TODO Try to fix current travis-ci build
+- [ ] Cloning submodule fails
 **** TODO Some wiki work
      See 'My Current Tasks' in my page
 - [ ] http://www.rainbrurpg.org/Main/WebHome#How_to_get_RainbruRPG
